added sde module and used in lotvol_model

--- a/examples/bridge_proposal.ipynb
+++ b/examples/bridge_proposal.ipynb
@@ -50,10 +50,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
-   "id": "72835a2f",
+   "execution_count": 2,
+   "id": "6db2ac82",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:absl:No GPU/TPU found, falling back to CPU. (Set TF_CPP_MIN_LOG_LEVEL=0 and rerun for more info.)\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -61,7 +68,7 @@
        " DeviceArray(-500.63470941, dtype=float64))"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -140,7 +147,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "22e605b9",
+   "id": "44f935dd",
    "metadata": {},
    "source": [
     "Next, we verify that $p(\\WW, \\YY) = p(\\YY) p(\\WW \\mid \\YY)$, where the LHS is the multivariate normal with mean and variance subset from those of $p(\\WW, \\XX, \\YY)$, and the RHS is the product of the conditional distribution of interest and the marginal of $\\WW$, which is the top left corner of $p(\\WW, \\XX, \\YY)$."
@@ -149,7 +156,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "8dd0403c",
+   "id": "20555653",
    "metadata": {},
    "outputs": [
     {
@@ -179,8 +186,183 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 91,
+   "id": "ce7a0500",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DeviceArray([0, 1, 2, 3, 4, 5, 6, 7, 8], dtype=int64)"
+      ]
+     },
+     "execution_count": 91,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x = jnp.arange(10)\n",
+    "x[:-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "id": "b806ea80",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DeviceArray(9, dtype=int64)"
+      ]
+     },
+     "execution_count": 92,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x[-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "id": "e5db52e0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DeviceArray([0, 1, 2, 3, 4, 5, 6, 7, 8, 9], dtype=int64)"
+      ]
+     },
+     "execution_count": 93,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "f56f9294",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DeviceArray([[0., 1., 2.],\n",
+       "             [0., 0., 0.],\n",
+       "             [0., 0., 0.],\n",
+       "             [0., 0., 0.],\n",
+       "             [0., 0., 0.],\n",
+       "             [0., 0., 0.]], dtype=float64)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x = jnp.arange(3)\n",
+    "y = jnp.zeros((5, 3))\n",
+    "jnp.append(jnp.expand_dims(x, axis=0), y, axis=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "ee7e5c62",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DeviceArray([[0., 1., 2.],\n",
+       "             [0., 0., 0.],\n",
+       "             [0., 0., 0.],\n",
+       "             [0., 0., 0.],\n",
+       "             [0., 0., 0.],\n",
+       "             [0., 0., 0.]], dtype=float64)"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "jnp.block([[x], [y]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "cafe6ced",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DeviceArray([[[1., 1., 1.],\n",
+       "              [1., 1., 1.]],\n",
+       "\n",
+       "             [[0., 0., 0.],\n",
+       "              [0., 0., 0.]],\n",
+       "\n",
+       "             [[0., 0., 0.],\n",
+       "              [0., 0., 0.]],\n",
+       "\n",
+       "             [[0., 0., 0.],\n",
+       "              [0., 0., 0.]],\n",
+       "\n",
+       "             [[0., 0., 0.],\n",
+       "              [0., 0., 0.]]], dtype=float64)"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x = jnp.ones((2, 3))\n",
+    "y = jnp.zeros((4, 2, 3))\n",
+    "jnp.append(jnp.expand_dims(x, axis=0), y, axis=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "37fbca2b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(7, 2, 3)"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(7,) + x.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "24781466",
+   "id": "04936aa7",
    "metadata": {},
    "outputs": [],
    "source": []
