--- a/examples/pfjax.ipynb
+++ b/examples/pfjax.ipynb
@@ -15,27 +15,27 @@
     "The goal is to provide a fast implementation of a particle filter to estimate the marginal likelihood of a state-space model,\n",
     "$$\n",
     "\\begin{aligned}\n",
-    "\\mathcal{L}(\\theta) & = p(y_{0:T} \\mid \\theta) \\\\\n",
-    "& = \\int \\prod_{t=0}^T p(y_t \\mid x_t, \\theta) \\times \\prod_{t=1}^T p(x_t \\mid x_{t-1}, \\theta) \\times p(x_0 \\mid \\theta)\\, d x_{0:T},   \n",
+    "\\mathcal{L}(\\tth) & = p(\\yy_{0:T} \\mid \\tth) \\\\\n",
+    "& = \\int \\prod_{t=0}^T p(\\yy_t \\mid \\xx_t, \\tth) \\times \\prod_{t=1}^T p(\\xx_t \\mid \\xx_{t-1}, \\tth) \\times p(\\xx_0 \\mid \\tth)\\, d \\xx_{0:T},   \n",
     "\\end{aligned}\n",
     "$$\n",
-    "along with its gradient, $\\nabla \\mathcal{L}(\\theta) = \\frac{\\partial}{\\partial \\theta} \\mathcal{L}(\\theta)$.  The [**JAX**](https://github.com/google/jax) library is used to efficiently compose jit and autodiff operations  in order to achieve this.\n",
+    "along with its gradient, $\\nabla \\mathcal{L}(\\tth) = \\frac{\\partial}{\\partial \\tth} \\mathcal{L}(\\tth)$.  The [**JAX**](https://github.com/google/jax) library is used to efficiently compose jit and autodiff operations  in order to achieve this.\n",
     "\n",
     "## API\n",
     "\n",
-    "For given $\\theta$, the particle filter begins by running an importance sampler for $p(x_0 \\mid y_0, \\theta)$.  In order to do this, the user supplies a sampling proposal distribution,\n",
+    "For given $\\tth$, the particle filter begins by running an importance sampler for $p(x_0 \\mid y_0, \\tth)$.  In order to do this, the user supplies a sampling proposal distribution,\n",
     "\n",
     "$$\n",
-    "x_0 \\sim q(x_0 \\mid y_0, \\theta),\n",
+    "\\xx_0 \\sim q(\\xx_0 \\mid \\yy_0, \\tth),\n",
     "$$\n",
     "\n",
     "along with a function to calculate the importance log weights,\n",
     "\n",
     "$$\n",
-    "w(x_0 \\mid y_0, \\theta) = \\log p(y_0 \\mid x_0, \\theta) + \\log p(x_0 \\mid \\theta) - \\log q(x_0 \\mid y_0, \\theta).\n",
+    "w(\\xx_0 \\mid \\yy_0, \\tth) = \\log p(\\yy_0 \\mid \\xx_0, \\tth) + \\log p(\\xx_0 \\mid \\tth) - \\log q(\\xx_0 \\mid \\yy_0, \\tth).\n",
     "$$\n",
     "\n",
-    "Since sampling from $q(x_0 \\mid y_0, \\theta)$ and computing $w(x_0 \\mid y_0, \\theta)$ involve many shared calculations, **pfjax** requires both to be performed in a single function:\n",
+    "Since sampling from $q(\\xx_0 \\mid \\yy_0, \\tth)$ and computing $w(\\xx_0 \\mid \\yy_0, \\tth)$ involve many shared calculations, **pfjax** requires both to be performed in a single function:\n",
     "\n",
     "```python\n",
     "def pf_init(y_init, theta, key):\n",
@@ -43,16 +43,16 @@
     "    return (x_init, logw)\n",
     "```\n",
     "\n",
-    "Now suppose we have run the particle filter until step $t-1$.  In other words, the input is a weighted set of particles $((x_{t-1}^{(1)}, w_{t-1}^{(1)}), \\ldots, (x_{t-1}^{(B)}, w_{t-1}^{(B)}))$ representing the distribution $p(x_{t-1} \\mid y_{0:t-1}, \\theta)$.  In order to get to a weighted set of particles representing $p(x_t \\mid y_t, \\theta)$, the user suppliles a sampling proposal distribution\n",
+    "Now suppose we have run the particle filter until step $t-1$.  In other words, the input is a weighted set of particles $((\\xx_{t-1}^{(1)}, w_{t-1}^{(1)}), \\ldots, (\\xx_{t-1}^{(B)}, w_{t-1}^{(B)}))$ representing the distribution $p(\\xx_{t-1} \\mid \\yy_{0:t-1}, \\tth)$.  In order to get to a weighted set of particles representing $p(\\xx_t \\mid \\yy_t, \\tth)$, the user suppliles a sampling proposal distribution\n",
     "\n",
     "$$\n",
-    "x_t \\sim q(x_t \\mid x_{t-1}, y_t, \\theta)\n",
+    "\\xx_t \\sim q(\\xx_t \\mid \\xx_{t-1}, \\yy_t, \\tth)\n",
     "$$\n",
     "\n",
     "and a log-weight function\n",
     "\n",
     "$$\n",
-    "w(x_t \\mid x_{t-1}, y_t, \\theta) = \\log p(y_t \\mid x_{t-1}, \\theta) + \\log p(x_t \\mid x_{t-1}, \\theta) - \\log q(x_t \\mid x_{t-1}, y_t, \\theta).\n",
+    "w(\\xx_t \\mid \\xx_{t-1}, \\yy_t, \\tth) = \\log p(\\yy_t \\mid \\xx_{t-1}, \\tth) + \\log p(\\xx_t \\mid \\xx_{t-1}, \\tth) - \\log q(\\xx_t \\mid \\xx_{t-1}, \\yy_t, \\tth).\n",
     "$$\n",
     "\n",
     "Again, these are supplied as a single function:\n",
@@ -67,86 +67,17 @@
     "\n",
     "### Functions\n",
     "\n",
-    "- `state_lpdf(x_curr, x_last, theta)`: Log-density of $p(x_t | x_{t-1}, \\theta)$.\n",
-    "- `state_sample(x_last, theta)`: Sample from $p(x_t | x_{t-1}, \\theta)$.\n",
-    "- `meas_lpdf(y_curr, x_curr, theta)`: Log-density of $p(y_t | x_t, \\theta)$.\n",
-    "- `meas_sample(x_curr, theta)`: Sample from $p(y_t | x_t, \\theta)$.\n",
+    "- `state_lpdf(x_curr, x_last, theta)`: Log-density of $p(\\xx_t | \\xx_{t-1}, \\tth)$.\n",
+    "- `state_sample(x_last, theta)`: Sample from $p(\\xx_t | \\xx_{t-1}, \\tth)$.\n",
+    "- `meas_lpdf(y_curr, x_curr, theta)`: Log-density of $p(\\yy_t | \\xx_t, \\tth)$.\n",
+    "- `meas_sample(x_curr, theta)`: Sample from $p(\\yy_t | \\xx_t, \\tth)$.\n",
     "\n",
     "### Dimensions\n",
     "\n",
     "- `n_obs`: Number of time points.\n",
     "- `n_particle`: Number of particles.\n",
     "- `n_state`: Tuple of state dimensions.\n",
-    "- `n_meas`: Tuple of measured dimensions.\n",
-    "\n",
-    "## TODO\n",
-    "\n",
-    "- [x] Test against true BM likelihood.\n",
-    "\n",
-    "    Seem to get reasonable projection plots and a reasonable stochastic optimization.\n",
-    "\n",
-    "- [x] Data should be $y_{0:T}$ instead of $y_{1:T}$.  This has been changed in some of the documentation but not all of it...\n",
-    "\n",
-    "- [x] Add arbitrary prior specification $p(x_0 \\mid \\theta)$.  Should also be able to specify $x_0$ directly to calculate the marginal likelihood $\\mathcal{L}(x_0, \\theta) = p(y_{0:T} \\mid x_0, \\theta)$.\n",
-    "\n",
-    "- [ ] Example where `n_state` and `n_meas` are not scalar.  This can be SDE with `n_res > 1`.\n",
-    "\n",
-    "    **Update:** Implemented but not tested...\n",
-    "\n",
-    "- [x] Interface for supplying new models to generic PF code.  Currently we have the following:\n",
-    "\n",
-    "    ```python\n",
-    "    import pfjax as pf # generic code\n",
-    "    from my_model import MyModel # user-defined model\n",
-    "\n",
-    "    # pf estimate of marginal loglikelihood\n",
-    "    def marginal_loglik(model, y_meas, theta, n_particles, key):\n",
-    "        out = pf.particle_filter(model, y_meas, theta, n_particles, key)\n",
-    "        return pf.particle_loglik(out[\"logw_particles\"])\n",
-    "    \n",
-    "    # construct model object\n",
-    "    model = MyModel(dt=dt) # set dt as a data member\n",
-    "    marginal_loglik(model, y_meas, theta, n_particles, key)\n",
-    "    \n",
-    "    # jit + grad version\n",
-    "    marginal_loglik_jgrad = jax.jit(jax.grad(marginal_loglik, argnums=2), static_argnums=(0, 3))\n",
-    "    marginal_loglik_jgrad(model, y_meas, theta, n_particles, key)\n",
-    "    ```\n",
-    "    \n",
-    "    **WARNING:** The following code does not behave as \"expected\":\n",
-    "    \n",
-    "    ```python\n",
-    "    model.dt = 2 * dt # update value of dt\n",
-    "    marginal_loglik_jgrad(model, y_meas, theta, n_particles, key) # WARNING: uses the original dt...\n",
-    "    ```\n",
-    "    \n",
-    "    In other words, JAX does not recompile `marginal_loglik_jgrad()` with the updated value of `model`, even though we've flagged it with `static_argnums`.\n",
-    "    \n",
-    "- [ ] Add arbitrary proposal distribution $q(x_t \\mid x_{t-1}, \\theta)$.  This should perhaps be done using:\n",
-    "\n",
-    "    ```python\n",
-    "    step_sample(x_prev, t, theta)\n",
-    "    step_logw(x_curr, x_prev, t, theta)\n",
-    "    ```\n",
-    "    \n",
-    "    instead of e.g., `state_prop_lpdf()`, `state_targ_lpdf()` and `meas_lpdf()` which gets assembled internally for the user.  This is what was done in [**SMCTC**](https://warwick.ac.uk/fac/sci/statistics/staff/academic-research/johansen/smctc/).  But what are the right args to these functions?  Sort of depends if they know about the \"global\" `y_meas`.  I think the right compromise is:\n",
-    "    \n",
-    "    ```python\n",
-    "    step_sample(x_prev, y_curr, t, theta)\n",
-    "    step_logw(x_curr, x_prev, y_curr, t, theta)\n",
-    "    ```\n",
-    "    \n",
-    "    In other words, can use `y_curr` for an optimal filter, can support non-homogeneous state-space models via `t`, and anything more complicated will require globals.\n",
-    "    \n",
-    "- [x] Add proper unit tests.  But of what?  Seems like JAX and NumPy are so similar that checking code from one against the other will hardly be that helpful...\n",
-    "\n",
-    "    So, decided to test for-loop vs `vmap`/`xmap`/`lax.scan` etc always using JAX.  Reasoning is that without these constructs, JAX is identical to NumPy except PRNGs.\n",
-    "    \n",
-    "    Also testing OOP vs globals interface and jit + grad.\n",
-    "\n",
-    "- [ ] Add CPU parallelism support.\n",
-    "\n",
-    "    **Update:** Have started on an `xmap` implementation for this.  Trick will be to divide the `n_particles` axis into a 2D axis, in which the first is between (CPU) devices and the second is within each device."
+    "- `n_meas`: Tuple of measured dimensions."
    ]
   },
   {
@@ -157,8 +88,6 @@
     "\n",
     "The model is\n",
     "$$\n",
-    "\\newcommand{\\N}{\\mathcal{N}}\n",
-    "\\newcommand{\\dt}{\\Delta t}\n",
     "\\begin{aligned}\n",
     "x_0 & \\sim \\pi(x_0) \\\\\n",
     "x_t & \\sim \\N(x_{t-1} + \\mu \\dt, \\sigma^2 \\dt) \\\\\n",
@@ -308,36 +237,36 @@
    "source": [
     "### Test against exact likelihood\n",
     "\n",
-    "The exact likelihood is defined as $p(y_{1:T} \\mid y_0, \\theta)$ rather than $p(y_{0:T} \\mid \\theta)$.  The reason is that the latter expression requires one to integrate over $x_0 \\sim \\pi(x_0)$, which can only be done when $\\pi(x_0)$ is a proper prior.  However, for our choice of $\\pi(x_0) \\propto 1$ this is not the case.  On the other hand, $p(y_{1:T} \\mid y_0, \\theta)$ only requires us to integrate over $p(x_0 \\mid y_0, \\theta)$, which only requires the posterior to be proper (which is always the case for valid Bayesian inference).\n",
+    "The exact likelihood is defined as $p(\\yy_{1:T} \\mid y_0, \\tth)$ rather than $p(\\yy_{0:T} \\mid \\tth)$.  The reason is that the latter expression requires one to integrate over $x_0 \\sim \\pi(x_0)$, which can only be done when $\\pi(x_0)$ is a proper prior.  However, for our choice of $\\pi(x_0) \\propto 1$ this is not the case.  On the other hand, $p(\\yy_{1:T} \\mid y_0, \\tth)$ only requires us to integrate over $p(x_0 \\mid y_0, \\tth)$, which only requires the posterior to be proper (which is always the case for valid Bayesian inference).\n",
     "\n",
-    "Conditioned on $x_0$ and $\\theta$, the Brownian latent variables $x_{1:T}$ are multivariate normal with\n",
+    "Conditioned on $x_0$ and $\\tth$, the Brownian latent variables $\\xx_{1:T}$ are multivariate normal with\n",
     "$$\n",
     "\\newcommand{\\cov}{\\operatorname{cov}}\n",
     "\\begin{aligned}\n",
-    "%E[x_0 \\mid \\theta] & = y_0 & \\var(x_0\\\\\n",
-    "E[x_t \\mid x_0, \\theta] & = x_0 + \\mu t, \\\\\n",
-    "\\cov(x_s, x_t \\mid x_0, \\theta) & = \\sigma^2 \\min(s, t).\n",
+    "%E[x_0 \\mid \\tth] & = y_0 & \\var(x_0\\\\\n",
+    "E[x_t \\mid x_0, \\tth] & = x_0 + \\mu t, \\\\\n",
+    "\\cov(x_s, x_t \\mid x_0, \\tth) & = \\sigma^2 \\min(s, t).\n",
     "\\end{aligned}\n",
     "$$\n",
-    "Conditioned on $x_{0:T}$ and $\\theta$, the measurement variables $y_{1:T}$ are multivariate normal with\n",
+    "Conditioned on $\\xx_{0:T}$ and $\\tth$, the measurement variables $\\yy_{1:T}$ are multivariate normal with\n",
     "$$\n",
     "\\begin{aligned}\n",
-    "E[y_t \\mid x_{0:T}, \\theta] & = x_{1:T}, \\\\\n",
-    "\\cov(y_s, y_t \\mid x_{0:T}, \\theta) & = \\tau^2 \\delta_{st}.\n",
+    "E[y_t \\mid \\xx_{0:T}, \\tth] & = \\xx_{1:T}, \\\\\n",
+    "\\cov(y_s, y_t \\mid \\xx_{0:T}, \\tth) & = \\tau^2 \\delta_{st}.\n",
     "\\end{aligned}\n",
     "$$\n",
-    "Therefore, the marginal distribution of $y_{1:T}$ is multivariate normal with\n",
+    "Therefore, the marginal distribution of $\\yy_{1:T}$ is multivariate normal with\n",
     "$$\n",
     "\\begin{aligned}\n",
-    "E[y_t \\mid x_0, \\theta] & = x_0 + \\mu t, \\\\\n",
-    "\\cov(y_s, y_t \\mid x_0, \\theta) & = \\sigma^2 \\min(s, t) + \\tau^2 \\delta_{st}.\n",
+    "E[y_t \\mid x_0, \\tth] & = x_0 + \\mu t, \\\\\n",
+    "\\cov(y_s, y_t \\mid x_0, \\tth) & = \\sigma^2 \\min(s, t) + \\tau^2 \\delta_{st}.\n",
     "\\end{aligned}\n",
     "$$\n",
-    "For the given choice of prior, we have $x_0 \\mid y_0 \\sim \\N(y_0, \\tau^2)$ for the initial observation $y_0$.  Integrating over $x_0$, the marginal distribution of $y_{1:T}$ is MVN with\n",
+    "For the given choice of prior, we have $x_0 \\mid y_0 \\sim \\N(y_0, \\tau^2)$ for the initial observation $y_0$.  Integrating over $x_0$, the marginal distribution of $\\yy_{1:T}$ is MVN with\n",
     "$$\n",
     "\\begin{aligned}\n",
-    "E[y_t \\mid y_0, \\theta] & = y_0 + \\mu t, \\\\\n",
-    "\\cov(y_s, y_t \\mid y_0, \\theta) & = \\sigma^2 \\min(s, t) + \\tau^2(\\delta_{st} + 1).\n",
+    "E[y_t \\mid y_0, \\tth] & = y_0 + \\mu t, \\\\\n",
+    "\\cov(y_s, y_t \\mid y_0, \\tth) & = \\sigma^2 \\min(s, t) + \\tau^2(\\delta_{st} + 1).\n",
     "\\end{aligned}\n",
     "$$"
    ]
@@ -1256,6 +1185,24 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.8.12"
+  },
+  "latex_envs": {
+   "LaTeX_envs_menu_present": true,
+   "autoclose": false,
+   "autocomplete": true,
+   "bibliofile": "biblio.bib",
+   "cite_by": "apalike",
+   "current_citInitial": 1,
+   "eqLabelWithNumbers": true,
+   "eqNumInitial": 1,
+   "hotkeys": {
+    "equation": "Ctrl-E",
+    "itemize": "Ctrl-I"
+   },
+   "labels_anchors": false,
+   "latex_user_defs": true,
+   "report_style_numbering": false,
+   "user_envs_cfg": false
   }
  },
  "nbformat": 4,
