--- a/examples/sde.ipynb
+++ b/examples/sde.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "a456f69b",
+   "id": "5a85f29a",
    "metadata": {},
    "source": [
     "# Stochastic Differential Equations in PFJAX\n",
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c19ba6f1",
+   "id": "3739922d",
    "metadata": {},
    "source": [
     "## Particle Filtering\n",
@@ -73,7 +73,7 @@
     "$$\n",
     "\\begin{aligned}\n",
     "\\XX\\up m_0 & \\sim \\pi(\\XX\\up m_0 \\mid \\tth), \\\\\n",
-    "\\XX\\up n & = 0, \\ \\ \\ \\ \\ -m+1 \\le n < 0.\n",
+    "\\XX\\up m_n & = 0, \\ \\ \\ \\ \\ -m+1 \\le n < 0.\n",
     "\\end{aligned}\n",
     "$$\n",
     "\n",
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e4a13d57",
+   "id": "dfed5fda",
    "metadata": {},
    "source": [
     "### Bridge Proposal\n",
@@ -154,10 +154,24 @@
     "    \n",
     "There are a few special cases of this formula:\n",
     "\n",
-    "1.  When $\\AA = \\begin{bmatrix} \\II_{p \\times p} & \\bz_{p \\times (d-p)} \\end{bmatrix}$, for the measurement variables we have $E[\\YY_1 \\mid \\XX\\up m_{m}] = \\XX\\up m_{m}$.  Moreover, for $\\SSi_n = \\left[\\begin{smallmatrix} \\SSi_{11} & \\SSi_{12} \\\\ \\SSi_{21} & \\SSi_{22} \\end{smallmatrix} \\right]$ we have \n",
+    "1.  When $\\AA = \\begin{bmatrix} \\II_{p \\times p} & \\bz_{p \\times (d-p)} \\end{bmatrix}$, for the measurement variables we have $E[\\YY_1 \\mid \\XX\\up m_{m}] = \\XX\\up m_{m}$.  Moreover, for \n",
+    "\n",
+    "    $$\n",
+    "    \\begin{aligned}\n",
+    "    \\XX\\up m_n & = \\begin{bmatrix} \\XX\\up m_{n1} \\\\ \\XX\\up m_{n2} \\end{bmatrix}, &\n",
+    "    \\dr_n & = \\begin{bmatrix} \\dr_{1} \\\\ \\dr_{2} \\end{bmatrix}, & \n",
+    "    \\SSi_n & = \\begin{bmatrix} \\SSi_{11} & \\SSi_{12} \\\\ \\SSi_{21} & \\SSi_{22} \\end{bmatrix}\n",
+    "    \\end{aligned}\n",
+    "    $$ \n",
+    "    \n",
+    "    we have \n",
     "\n",
     "\t$$\n",
-    "\t\\begin{aligned} \\SSi_n \\AA' & = \\begin{bmatrix} \\SSi_{11} \\\\ \\SSi_{21} \\end{bmatrix}, & \\AA \\SSi_n \\AA' & = \\SSi_{11}, & \\AA' \\SSi_Y^{-1} \\AA & = \\begin{bmatrix} \\SSi_Y^{-1} & \\bz \\\\ \\bz & \\bz \\end{bmatrix}.\n",
+    "\t\\begin{aligned} \n",
+    "    \\mmu_Y & = \\XX\\up m_{n1} + k \\dt_m \\dr_{1}, & \n",
+    "    \\SSi_n \\AA' & = \\begin{bmatrix} \\SSi_{11} \\\\ \\SSi_{21} \\end{bmatrix}, & \n",
+    "    \\AA \\SSi_n \\AA' & = \\SSi_{11}, & \n",
+    "    \\AA' \\SSi_Y^{-1} \\AA & = \\begin{bmatrix} \\SSi_Y^{-1} & \\bz \\\\ \\bz & \\bz \\end{bmatrix}.\n",
     "\t\\end{aligned}\n",
     "\t$$\n",
     "\n",
@@ -171,13 +185,54 @@
     "\t\n",
     "\twhere $\\XX\\up m_{n1}$ are the first $p$ components of $\\XX\\up m_m$.\n",
     "    \n",
-    "4.  Suppose that in addition to 1, both $\\SSi_n$ and $\\OOm$ are diagonal. *[TBD]*\n"
+    "4.  Suppose that in addition to 1, both $\\SSi_n$ and $\\OOm$ are diagonal. Then the formulas above can be implemented componentwise, i.e., without matrix operations.  That is, suppose we have $\\df_n = \\diag(\\tau_1, \\ldots, \\tau_d)$ and $\\OOm = \\diag(\\omega_1, \\ldots, \\omega_p)$.  Then *[TBD]*\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f70a544d",
+   "metadata": {},
+   "source": [
+    "## Example: Lotka-Volterra Model\n",
+    "\n",
+    "The SDE model is on $\\XX(t) = (X_H(t), X_L(t))$ and is given by\n",
+    "\n",
+    "$$\n",
+    "\\begin{aligned}\n",
+    "\\ud X_H(t) & = (\\alpha - \\beta \\exp(X_L(t))) \\ud t + \\sigma_H \\ud B_H(t) \\\\\n",
+    "\\ud X_H(t) & = (-\\gamma + \\delta \\exp(X_H(t))) \\ud t + \\sigma_L \\ud B_L(t),\n",
+    "\\end{aligned}\n",
+    "$$\n",
+    "\n",
+    "where $B_H(t)$ and $B_L(t)$ are iid standard Brownian motions.  The measurement model is on $\\YY_n = (Y^H_n, Y^L_n)$ and is given by \n",
+    "$$\n",
+    "\\begin{aligned}\n",
+    "Y^H_{n} & \\ind \\N(\\exp(X_H(n \\dt)), \\tau_H^2) \\\\\n",
+    "Y^L_{n} & \\ind \\N(\\exp(X_L(n \\dt)), \\tau_L^2). \n",
+    "\\end{aligned}\n",
+    "$$\n",
+    "\n",
+    "The parameters of the model are thus $\\tth = (\\alpha, \\beta, \\gamma, \\delta, \\sigma_H, \\sigma_L, \\tau_H, \\tau_L)$.  The prior is $\\exp(\\XX(0)) \\propto 1$, such that\n",
+    "\n",
+    "$$\n",
+    "\\exp(\\XX(0)) \\mid \\YY_0, \\tth \\sim \\mathrm{TruncatedNormal}(\\YY_0, \\diag(\\tau_H^2, \\tau_L^2)),\n",
+    "$$\n",
+    "\n",
+    "where the truncation in both cases is for $\\exp(\\XX(0)) > 0$."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1b456a3c",
+   "id": "395902cf",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ac3ffdcf",
    "metadata": {},
    "outputs": [],
    "source": []
