refactored log-lik functions

--- a/examples/bridge_proposal.ipynb
+++ b/examples/bridge_proposal.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "4bc9a0fe",
    "metadata": {},
    "source": [
     "# Bridge Proposals for SDEs\n",
@@ -40,7 +39,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e698ce47",
    "metadata": {},
    "source": [
     "### Numerical Verification\n",
@@ -51,7 +49,6 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "6db2ac82",
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +144,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "44f935dd",
    "metadata": {},
    "source": [
     "Next, we verify that $p(\\WW, \\YY) = p(\\YY) p(\\WW \\mid \\YY)$, where the LHS is the multivariate normal with mean and variance subset from those of $p(\\WW, \\XX, \\YY)$, and the RHS is the product of the conditional distribution of interest and the marginal of $\\WW$, which is the top left corner of $p(\\WW, \\XX, \\YY)$."
@@ -156,7 +152,6 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "20555653",
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +182,6 @@
   {
    "cell_type": "code",
    "execution_count": 91,
-   "id": "ce7a0500",
    "metadata": {},
    "outputs": [
     {
@@ -209,7 +203,6 @@
   {
    "cell_type": "code",
    "execution_count": 92,
-   "id": "b806ea80",
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +223,6 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "id": "e5db52e0",
    "metadata": {},
    "outputs": [
     {
@@ -251,7 +243,6 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "f56f9294",
    "metadata": {},
    "outputs": [
     {
@@ -279,7 +270,6 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "ee7e5c62",
    "metadata": {},
    "outputs": [
     {
@@ -305,7 +295,6 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "cafe6ced",
    "metadata": {},
    "outputs": [
     {
@@ -341,7 +330,6 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "37fbca2b",
    "metadata": {},
    "outputs": [
     {
@@ -362,7 +350,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "04936aa7",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -370,7 +357,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -384,7 +371,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.7.7"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
