--- a/examples/lotvol.ipynb
+++ b/examples/lotvol.ipynb
@@ -42,8 +42,8 @@
     "\n",
     "from pfjax.particle_filter import particle_filter as pf\n",
     "from pfjax import particle_filter_mvn as pfmvn\n",
-    "from pfjax.particle_filter import joint_loglik, particle_loglik, simulate\n",
-    "from pfjax import proj_data\n",
+    "from pfjax.particle_filter import joint_loglik, particle_loglik\n",
+    "from pfjax import proj_data, simulate\n",
     "from pfjax.lotvol_model import LotVolModel"
    ]
   },
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "4d64126d",
    "metadata": {},
    "outputs": [
@@ -333,17 +333,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "52025e2d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pfjax.particle_filter import stoch_opt # get_sum_lweights"
+    "from pfjax import stoch_opt  # get_sum_lweights"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "id": "d4b6802d",
    "metadata": {},
    "outputs": [
@@ -372,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "id": "820cf314",
    "metadata": {},
    "outputs": [
@@ -421,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "id": "772819e6",
    "metadata": {},
    "outputs": [],
@@ -431,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 12,
    "id": "9fffcc9c",
    "metadata": {},
    "outputs": [
@@ -439,7 +439,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Estimated params: [nan, nan, nan, nan, nan, nan, nan, nan]\n",
+      "Estimated params: [0.90000004, 1.0, 4.0, 1.0, 0.0, 0.1, 0.3, 0.3]\n",
       "True params: [1.0, 1.0, 4.0, 1.0, 0.1, 0.1, 0.25, 0.25]\n"
      ]
     }
@@ -472,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "547b9263",
    "metadata": {},
    "outputs": [
@@ -482,7 +482,7 @@
        "DeviceArray(0.01283248, dtype=float32)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -503,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "87337e3c",
    "metadata": {},
    "outputs": [
