--- a/examples/sde.ipynb
+++ b/examples/sde.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "5a85f29a",
    "metadata": {},
    "source": [
     "# Stochastic Differential Equations in PFJAX\n",
@@ -53,7 +52,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3739922d",
    "metadata": {},
    "source": [
     "## Particle Filtering\n",
@@ -82,7 +80,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dfed5fda",
    "metadata": {},
    "source": [
     "### Bridge Proposal\n",
@@ -190,7 +187,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f70a544d",
    "metadata": {},
    "source": [
     "## Example: Lotka-Volterra Model\n",
@@ -224,7 +220,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "395902cf",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -232,7 +227,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ac3ffdcf",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -240,7 +234,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -254,7 +248,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.7.7"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
