--- a/examples/todo.ipynb
+++ b/examples/todo.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "00861c59",
    "metadata": {},
    "source": [
     "# TODO\n",
@@ -149,7 +148,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7f0a9e57",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -157,7 +155,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -171,7 +169,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.7.7"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
