--- a/examples/lotvol-mvn.ipynb
+++ b/examples/lotvol-mvn.ipynb
@@ -43,7 +43,7 @@
     "\n",
     "from pfjax.particle_filter import particle_filter as pf\n",
     "from pfjax import particle_filter_mvn as pfmvn\n",
-    "from pfjax.particle_filter import joint_loglik, particle_loglik\n",
+    "from pfjax.particle_filter import particle_loglik\n",
     "from pfjax import proj_data, simulate\n",
     "from pfjax.lotvol_model import LotVolModel"
    ]
@@ -255,7 +255,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time: 11.805448303999995\n"
+      "Time: 10.816244995999995\n"
      ]
     }
    ],
@@ -336,19 +336,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "hessian = jax.jacfwd(jax.jacrev(pfmvn.get_sum_lweights_mvn))"
+    "hessian = jax.jacfwd(jax.jacrev(pfmvn.get_sum_lweights_mvn))\n",
+    "\n",
+    "# should increase the number of particles here, since we want a one-time accurate approx. of the loglik\n",
+    "hess = hessian(params, key, \n",
+    "               n_particles=1000, \n",
+    "               y_meas=y_meas, \n",
+    "               model=lotvol_model)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DeviceArray([0.8948623 , 0.98993236, 3.8975642 , 0.97427595, 0.01172644,\n",
+       "             0.03575179, 0.30423996, 0.26480612], dtype=float32)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "posterior_samples = random.multivariate_normal(key=key, mean=theta_hat, cov=-var_hat, shape=(n_post_samples, ))"
+   ]
   },
   {
    "cell_type": "markdown",
