added sde tests

--- a/examples/latexdefs.tex
+++ b/examples/latexdefs.tex
@@ -38,6 +38,7 @@
 \newcommand{\RR}{{\bm R}}
 \newcommand{\WW}{\bm{W}}
 \newcommand{\XX}{\bm{X}}
+\newcommand{\ZZ}{\bm{Z}}
 \newcommand{\xx}{\bm{x}}
 \newcommand{\yy}{\bm{y}}
 \newcommand{\YY}{\bm{Y}}
