--- a/examples/lotvol.ipynb
+++ b/examples/lotvol.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "057653d5",
    "metadata": {},
    "source": [
     "## Simulate and Plot Data"
@@ -11,7 +10,6 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "2cf660e6",
    "metadata": {},
    "outputs": [
     {
@@ -59,16 +57,38 @@
     "key, subkey = random.split(key)\n",
     "\n",
     "\n",
-    "x_init = lotvol_model.init_sample(y_init=jnp.array([5., 3.]),\n",
-    "                     theta=jnp.append(theta[0:6], jnp.array([0., 0.])),\n",
-    "                     key=subkey)\n",
+    "#x_init = lotvol_model.init_sample(y_init=jnp.array([5., 3.]),\n",
+    "#                     theta=jnp.append(theta[0:6], jnp.array([0., 0.])),\n",
+    "#                     key=subkey)\n",
     "\n",
-    "y_meas, x_state = pf.simulate(lotvol_model, n_obs, x_init, theta, subkey)\n"
+    "x_init = jnp.block([[jnp.zeros((n_res-1, 2))],\n",
+    "                        [jnp.log(jnp.array([5., 3.]))]])\n",
+    "\n",
+    "y_meas, x_state = pf.simulate(lotvol_model, subkey, n_obs, x_init, theta)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DeviceArray([[1.609438 , 1.0986123]], dtype=float32)"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x_init"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "f2a654a7",
    "metadata": {},
    "source": [
     "Plotting the observations of the state (latent variables) as well as the observations. The latent observations are the smooth lines given below and the observations are the slightly more jagged lines."
@@ -77,7 +97,6 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "3fb7d10d",
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +133,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e3a3a928",
    "metadata": {},
    "source": [
     "## Parameter Estimation with Complete Data\n",
@@ -129,7 +147,6 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "e3ae12dd",
    "metadata": {},
    "outputs": [
     {
@@ -183,7 +200,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "43647fb9",
    "metadata": {},
    "source": [
     "## Parameter Estimation with Particle Filter"
@@ -192,7 +208,6 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "f6f8feb9",
    "metadata": {},
    "outputs": [
     {
@@ -247,7 +262,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "39d7d365",
    "metadata": {},
    "source": [
     "### Stochastic Optimization\n",
@@ -258,7 +272,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "90c68118",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -268,7 +281,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9300c534",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,7 +290,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "17137b63",
    "metadata": {},
    "source": [
     "## Scratch"
@@ -287,7 +298,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "04808589",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -300,7 +310,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c67e517d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -312,7 +321,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d5e5fd27",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -322,7 +330,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a05d7fd1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -355,7 +362,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f9e7ccb5",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -377,7 +383,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
