--- a/examples/pfjax.ipynb
+++ b/examples/pfjax.ipynb
@@ -1170,7 +1170,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1184,7 +1184,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.9.10"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
