--- a/examples/sde.ipynb
+++ b/examples/sde.ipynb
@@ -261,7 +261,9 @@
    "cell_type": "code",
    "execution_count": 12,
    "id": "395902cf",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "data": {
@@ -316,7 +318,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -330,7 +332,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.9.10"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
