--- a/examples/qm_gle.ipynb
+++ b/examples/qm_gle.ipynb
@@ -18,7 +18,7 @@
     "\\begin{aligned}\n",
     "\\ud X(t) &= V(t) \\ud t \\\\\n",
     "\\ud V(t) &= -U'(X(t)) \\ud t + \\sum_{i=1}^m \\mu_i Z_i(t)  \\ud t \\\\\n",
-    "\\ud Z(t) &= -\\left(\\mu_i V(t) + \\rho_i Z_i(t) \\right) \\ud t + \\sqrt{2\\rho_i}/\\beta \\ud W_i(t), \\qquad i = 1,\\ldots,m\n",
+    "\\ud Z(t) &= -\\left(\\mu_i V(t) + \\rho_i Z_i(t) \\right) \\ud t + \\sqrt{2\\rho_i}/\\beta \\ud W_i(t), & i = 1,\\ldots,m\n",
     "\\end{aligned}\n",
     "$$\n",
     "\n",
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "12453f15",
+   "id": "811eff2f",
    "metadata": {},
    "source": [
     "## Euler-Maruyama Discretization\n",
@@ -36,16 +36,16 @@
     "\\begin{aligned}\n",
     "X_n - X_{n-1} &= V_{n-1} \\dt \\\\\n",
     "V_{n} - V_{n-1} &= U'(X_{n-1})\\dt + \\sum_{i=1}^m \\mu_i Z_{i,n-1} \\dt \\\\\n",
-    "Z_{i,n} - Z_{i,n-1} &= - \\left(\\mu_i V_{n-1} + \\rho_i Z_{i,n-1} \\right)\\dt + \\sqrt{2\\rho_i}/\\beta \\Delta W_{i,n-1}\n",
+    "Z_{i,n} - Z_{i,n-1} &= - \\left(\\mu_i V_{n-1} + \\rho_i Z_{i,n-1} \\right)\\dt + \\sqrt{2\\rho_i}/\\beta \\Delta W_{i,n-1} & i=1,\\ldots,m\n",
     "\\end{aligned}\n",
     "$$\n",
     "\n",
-    "where $\\Delta W_{i,n} = W_{i,n} - W_{i, n-1} \\iid \\N(0, \\dt)$, $i=1,\\ldots,m$, $m \\ge 1$ is predetermined."
+    "where $\\Delta W_{i,n} = W_{i,n} - W_{i, n-1} \\iid \\N(0, \\dt)$, $m \\ge 1$ is predetermined."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "c76e35ef",
+   "id": "4755aa96",
    "metadata": {},
    "source": [
     "## Idea 1: Bridge Proposal \n",
@@ -55,16 +55,16 @@
     "$$\n",
     "\\begin{aligned}\n",
     "\\Delta \\WW_{n-1} &\\sim \\N(\\bz, \\dt \\II)\\\\\n",
-    "Z_{i,n} \\mid \\WW & \\sim \\N(W_{i,n-1} + \\mmu_{Z|W}, 2\\rho_i/\\beta^2 \\dt \\II), \\quad \\mmu_{Z|W} = - \\left(\\mu_i V_{n-1} + \\rho_i Z_{i,n-1} \\right)\\dt,  \\\\\n",
-    "V_n \\mid X_{n-1}, Z_{n-1}, \\WW &\\sim \\N(V_{n-1} + \\mu_{V|Z}, \\bz), \\mu_{V|Z} = U'(X_{n-1})\\dt + \\sum_{i=1}^m \\mu_i Z_{i,n-1} \\dt \\\\\n",
-    "X_n \\mid V_{n-1}, Z_{n-1}, \\WW & \\sim \\N(X_{n-1} + \\mu_{X|V}, \\bz), \\mu_{X|V} = \\dt \\mu_{V|Z}\n",
+    "Z_{i,n} \\mid \\WW & \\sim \\N(W_{i,n-1} + \\mu_{Z_{i,n-1}|W}, 2\\rho_i \\dt/\\beta^2 \\II), & \\mu_{Z_{i,n-1}|W} = - \\left(\\mu_i V_{n-1} + \\rho_i Z_{i,n-1} \\right)\\dt,  \\\\\n",
+    "V_n \\mid X_{n-1}, Z_{n-1}, \\WW &\\sim \\N(V_{n-1} + \\mu_{V_{n-1}|Z}, \\bz), & \\mu_{V_{n-1}|Z} = U'(X_{n-1})\\dt + \\sum_{i=1}^m \\mu_i \\mu_{Z_{i,n-1}|W} \\dt \\\\\n",
+    "X_n \\mid V_{n-1}, Z_{n-1}, \\WW & \\sim \\N(X_{n-1} + \\mu_{X|V}, \\bz), & \\mu_{X|V} = \\dt \\mu_{V_{n-1}|Z}\n",
     "\\end{aligned}\n",
     "$$"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "b0a426ec",
+   "id": "04f69691",
    "metadata": {},
    "source": [
     "## Idea 2: Simulation based on Integrated Wiener Process ($m=1$)\n",
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b618c0bc",
+   "id": "1e6e79ae",
    "metadata": {},
    "source": [
     "The reason why we try to apply the integrated Wiener process is that we want to introduce more randomness to the first and second equations (which are deterministic) in the QM-GLE SDE.\n",
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1d514b2e",
+   "id": "c0ab58c4",
    "metadata": {},
    "source": []
   }
