update modified euler formula for qmgle

--- a/examples/latexdefs.tex
+++ b/examples/latexdefs.tex
@@ -49,6 +49,7 @@
 \newcommand{\gga}{{\bm \gamma}}
 \newcommand{\tta}{{\bm \tau}}
 \newcommand{\TTh}{\bm{\Theta}}
+\newcommand{\pph}{\bm{\phi}}
 \newcommand{\tth}{\bm{\theta}}
 \newcommand{\hess}[1]{\frac{\partial^2}{\partial{#1}\partial{#1}'}}
 \newcommand{\dt}{\Delta t}
