--- a/examples/qm_gle.ipynb
+++ b/examples/qm_gle.ipynb
@@ -17,12 +17,56 @@
     "$$\n",
     "\\begin{aligned}\n",
     "\\ud X(t) &= V(t) \\ud t \\\\\n",
-    "\\ud V(t) &= -U'(X(t)) \\ud t + \\sum_{i=1}^m \\mu_i Z_i(t)  \\ud t \\\\\n",
-    "\\ud Z(t) &= -\\left(\\mu_i V(t) + \\rho_i Z_i(t) \\right) \\ud t + \\sqrt{2\\rho_i}/\\beta \\ud W_i(t), & i = 1,\\ldots,m\n",
+    "\\ud V(t) &= -U'_{\\pph}(X(t)) \\ud t + \\sum_{i=1}^m \\mu_i Z_i(t)  \\ud t \\\\\n",
+    "\\ud Z_i(t) &= -\\left(\\mu_i V(t) + \\rho_i Z_i(t) \\right) \\ud t + \\sqrt{2\\rho_i}/\\beta \\ud B_i(t), & i = 1,\\ldots,m\n",
     "\\end{aligned}\n",
     "$$\n",
     "\n",
-    "where $X(t)$ is the observed (continuous-time) process whereas $V(t), Z(t)$ are latent, $U(\\cdot)$ is the potential energy function ($U'$ is its first-order derivative), $\\beta$, $\\mu_i$, $\\rho_i$ are unknown (positive) parameters, $\\WW(t) = (W_1(t), \\ldots, W_m(t))$ is an $m$-dimensional Brownian motion."
+    "where $X(t)$ is the observed (continuous-time) process whereas $V(t), Z(t)$ are latent, $U_{\\pph}(X)$ is the potential energy function which depends on parameters $\\pph$ ($U_{\\pph}'(X)$ is its first-order derivative wrt $X$), $\\beta$, $\\mu_i$, $\\rho_i$ are unknown (positive) parameters, $\\BB(t) = (B_1(t), \\ldots, B_m(t))$ is an $m$-dimensional Brownian motion."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f774c3c4",
+   "metadata": {},
+   "source": [
+    "## Modified Euler Discretization\n",
+    "\n",
+    "Let $t_n = n \\dt$, $\\WW(t) = (X(t), V(t), \\ZZ(t))$, $X_n = X(t_n)$, $\\Delta X_n = X_{n+1} - X_n$, and similarly for $V_n$, $\\Delta V_n$, $\\WW_n$, $\\Delta Z_{ni}$, etc.  Then the SDE above becomes\n",
+    "\n",
+    "$$\n",
+    "\\begin{aligned}\n",
+    "\\Delta X_n    & = \\int_{t_n}^{t_n+\\dt} V(t) \\ud t \\\\\n",
+    "\\Delta V_n    & = \\int_{t_n}^{t_n+\\dt} \\left[-U'_{\\pph}(X(t)) + \\sum_{i=1}^m \\mu_i Z_i(t)\\right]  \\ud t \\\\\n",
+    "              & \\approx -U'_{\\pph}(X_n) \\dt + \\int_{t_n}^{t_n+\\dt} \\sum_{i=1}^m \\mu_i Z_i(t) \\ud t \\\\\n",
+    "\\Delta Z_{ni} & = - \\int_{t_n}^{t_n+1} \\left(\\mu_i V(t) + \\rho_i Z_i(t) \\right) \\ud t + \\sqrt{2\\rho_i}/\\beta \\int_{t_n}^{t_n+\\dt} \\ud B_i(t) \\\\\n",
+    "              & \\approx \\left(\\mu_i V_n + \\rho_i Z_{ni}\\right)\\dt + \\sigma_i \\Delta B_{ni},\n",
+    "\\end{aligned}\n",
+    "$$\n",
+    "\n",
+    "where $\\sigma_i = \\sqrt{2\\rho_i}/\\beta$.  Note that the last approximation can be obtained by requiring $Z_i(t)$ to be Brownian motion with drift $\\lambda_{ni} = \\mu_i V_n + \\rho_i Z_{ni}$ and diffusion $\\sigma_i$ over the interval $t \\in [t_n, t_n+\\dt]$.  Using this approximation, $\\Delta V_n$ and $\\Delta X_n$ become single and double integrals of Brownian motion, for which the joint distribution is analytically available:\n",
+    "\n",
+    "- Let $B(t)^{(0}$ be standard Brownian motion, and let $B^{(1)}(t)$ and $B^{(2)}(t)$ denote its first and second integrals.  Then the joint distribution of $\\BB(t) = (B^{(2)}(t), B^{(1)}(t), B^{(0)}(t))$ is\n",
+    "\n",
+    "    $$\n",
+    "    \\BB(t) \\sim \\N\\left\\{\\bz, \\Sigma(t) = \\begin{pmatrix}\n",
+    "    \\frac{t^5}{20}  & \\frac{t^4}{8} & \\frac{t^3}{6} \\\\\n",
+    "      \\frac{t^4}{8}   & \\frac{t^3}{3}  & \\frac{t^2}{2} \\\\\n",
+    "      \\frac{t^3}{6}   & \\frac{t^2}{2}  & t\n",
+    "    \\end{pmatrix}\\right\\}.\n",
+    "    $$\n",
+    "    \n",
+    "- Let $\\BB_i(t) = (B_i^{(2)}(t), B_i^{(1)}(t), B_i^{(0)}(t))$ denote iid triplets as above, with $i = 1, \\ldots, m$.  Then $\\BB(t) = (\\BB_1(t), \\ldots, \\BB_m(t))$ is a multivariate normal with mean 0 and variance $\\SSi = \\diag(\\SSi(t), \\ldots, \\SSi(t))$.\n",
+    " \n",
+    "- Note that $\\Delta \\WW_n$ is a linear transformation of $\\BB(\\dt)$.  Use this to find its variance.\n",
+    "\n",
+    "- At the end of the day, we should have something like\n",
+    "\n",
+    "    $$\n",
+    "    \\WW(t_n + s) = \\WW_n + \\bm{g}(\\WW_n, \\tth, s) + \\bm{h}(\\WW_n, \\tth) \\mathcal{\\bm{Z}}, \n",
+    "    $$\n",
+    "    \n",
+    "    where $\\mathcal{\\bm{Z}}$ is a multivariate normal with mean zero and variance depending on $s$.  Use this to try to figure out the bridge proposal."
    ]
   },
   {
@@ -113,7 +157,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -127,7 +171,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.10"
+   "version": "3.8.12"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
