added prototype for sde bridge proposal

--- a/examples/sde.ipynb
+++ b/examples/sde.ipynb
@@ -148,6 +148,7 @@
     "\t$$\n",
     "\t\\begin{aligned}\n",
     "\t\\mmu_W & = \\XX\\up m_n + \\dr_n \\dt_m, & \\SSi_W & = \\dt_m \\SSi_n, \\\\\n",
+    "    % \\mmu_{X|W} & = k \\dt_m \\dr_n, & \\SSi_{X|W} & = k \\dt_m \\df_n, \\\\\n",
     "\t\\mmu_Y & = \\AA[\\XX \\up m_n + k \\dt_m \\dr_n], & \\SSi_Y & = k \\dt_m \\AA \\SSi_n \\AA' + \\OOm.\n",
     "\t\\end{aligned}\n",
     "\t$$\n",
