--- a/examples/PGNET.ipynb
+++ b/examples/PGNET.ipynb
@@ -93,49 +93,16 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "766f9914",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def joint_loglik(model, y_meas, x_state, theta):\n",
-    "    \"\"\"\n",
-    "    Calculate the joint loglikelihood `p(y_{0:T} | x_{0:T}, theta) * p(x_{0:T} | theta)`.\n",
-    "    Args:\n",
-    "        model: Object specifying the state-space model.\n",
-    "        y_meas: The sequence of `n_obs` measurement variables `y_meas = (y_0, ..., y_T)`, where `T = n_obs-1`.\n",
-    "        x_state: The sequence of `n_obs` state variables `x_state = (x_0, ..., x_T)`.\n",
-    "        theta: Parameter value.\n",
-    "    Returns:\n",
-    "        The value of the loglikelihood.\n",
-    "    \"\"\"\n",
-    "    n_obs = y_meas.shape[0]\n",
-    "    # initial measurement\n",
-    "    ll_init = model.meas_lpdf(y_curr=y_meas[0], x_curr=x_state[0],\n",
-    "                              theta=theta)\n",
-    "    # subsequent measurements and state variables\n",
-    "    ll_step = jax.vmap(lambda t:\n",
-    "                       model.state_lpdf(x_curr=x_state[t],\n",
-    "                                        x_prev=x_state[t-1],\n",
-    "                                        theta=theta) +\n",
-    "                       model.meas_lpdf(y_curr=y_meas[t],\n",
-    "                                       x_curr=x_state[t],\n",
-    "                                       theta=theta))(jnp.arange(1, n_obs))\n",
-    "    return ll_init + jnp.sum(ll_step)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
    "id": "e98280dc",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.FacetGrid at 0x7f42f0098d60>"
+       "<seaborn.axisgrid.FacetGrid at 0x7f6ccc5cedf0>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -165,7 +132,7 @@
     "\n",
     "@jax.jit\n",
     "def pgnet_loglik(theta):\n",
-    "    return joint_loglik(model=pgnet_model, theta=theta, x_state=x_state, y_meas=y_meas)\n",
+    "    return pf.full_loglik(model=pgnet_model, theta=theta, x_state=x_state, y_meas=y_meas)\n",
     "\n",
     "\n",
     "plot_df = proj_data(pgnet_loglik,\n",
@@ -255,6 +222,24 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.8.8"
+  },
+  "latex_envs": {
+   "LaTeX_envs_menu_present": true,
+   "autoclose": false,
+   "autocomplete": true,
+   "bibliofile": "biblio.bib",
+   "cite_by": "apalike",
+   "current_citInitial": 1,
+   "eqLabelWithNumbers": true,
+   "eqNumInitial": 1,
+   "hotkeys": {
+    "equation": "Ctrl-E",
+    "itemize": "Ctrl-I"
+   },
+   "labels_anchors": false,
+   "latex_user_defs": false,
+   "report_style_numbering": false,
+   "user_envs_cfg": false
   }
  },
  "nbformat": 4,
