--- a/examples/qm_gle.ipynb
+++ b/examples/qm_gle.ipynb
@@ -32,7 +32,7 @@
    "source": [
     "## Modified Euler Discretization\n",
     "\n",
-    "Let $t_n = n \\dt$, $\\WW(t) = (X(t), V(t), \\ZZ(t))$, $X_n = X(t_n)$, $\\Delta X_n = X_{n+1} - X_n$, and similarly for $V_n$, $\\Delta V_n$, $\\WW_n$, $\\Delta Z_{ni}$, etc.  Then the SDE above becomes\n",
+    "Let $t_n = n \\dt$, $\\WW(t) = (X(t), V(t), \\ZZ(t))$, $X_n = X(t_n)$, $\\Delta X_n = X_{n+1} - X_n$, and similarly for $\\Delta \\WW_n$, $V_n$, $\\Delta V_n$, $\\Delta Z_{ni}$, etc.  Then the SDE above becomes\n",
     "\n",
     "$$\n",
     "\\begin{aligned}\n",
@@ -40,7 +40,7 @@
     "\\Delta V_n    & = \\int_{t_n}^{t_n+\\dt} \\left[-U'_{\\pph}(X(t)) + \\sum_{i=1}^m \\mu_i Z_i(t)\\right]  \\ud t \\\\\n",
     "              & \\approx -U'_{\\pph}(X_n) \\dt + \\int_{t_n}^{t_n+\\dt} \\sum_{i=1}^m \\mu_i Z_i(t) \\ud t \\\\\n",
     "\\Delta Z_{ni} & = - \\int_{t_n}^{t_n+1} \\left(\\mu_i V(t) + \\rho_i Z_i(t) \\right) \\ud t + \\sqrt{2\\rho_i}/\\beta \\int_{t_n}^{t_n+\\dt} \\ud B_i(t) \\\\\n",
-    "              & \\approx \\left(\\mu_i V_n + \\rho_i Z_{ni}\\right)\\dt + \\sigma_i \\Delta B_{ni},\n",
+    "              & \\approx -\\left(\\mu_i V_n + \\rho_i Z_{ni}\\right)\\dt + \\sigma_i \\Delta B_{ni},\n",
     "\\end{aligned}\n",
     "$$\n",
     "\n",
@@ -58,7 +58,7 @@
     "    \n",
     "- Let $\\BB_i(t) = (B_i^{(2)}(t), B_i^{(1)}(t), B_i^{(0)}(t))$ denote iid triplets as above, with $i = 1, \\ldots, m$.  Then $\\BB(t) = (\\BB_1(t), \\ldots, \\BB_m(t))$ is a multivariate normal with mean 0 and variance $\\SSi = \\diag(\\SSi(t), \\ldots, \\SSi(t))$.\n",
     " \n",
-    "- Note that $\\Delta \\WW_n$ is a linear transformation of $\\BB(\\dt)$.  Use this to find its variance.\n",
+    "- Note that $\\Delta \\WW_n$ is a linear transformation of $\\Delta \\BB_n = \\BB(\\dt)$.  Use this to find its variance.\n",
     "\n",
     "- At the end of the day, we should have something like\n",
     "\n",
@@ -66,7 +66,46 @@
     "    \\WW(t_n + s) = \\WW_n + \\bm{g}(\\WW_n, \\tth, s) + \\bm{h}(\\WW_n, \\tth) \\mathcal{\\bm{Z}}, \n",
     "    $$\n",
     "    \n",
-    "    where $\\mathcal{\\bm{Z}}$ is a multivariate normal with mean zero and variance depending on $s$.  Use this to try to figure out the bridge proposal."
+    "    where $\\mathcal{\\bm{Z}}$ is a multivariate normal with mean zero and variance depending on $s$.  Use this to try to figure out the bridge proposal.\n",
+    "    \n",
+    "Some further derivation:\n",
+    "\n",
+    "Let $\\mmu = (\\mu_1, \\ldots, \\mu_m)$, $\\dr_n = (\\lambda_{n1}, \\ldots, \\lambda_{nm})$, $\\ssi = (\\sigma_1, \\ldots, \\sigma_m)$, $\\Delta \\BB_n^{(k)} = (B^{(k)}(\\dt), \\ldots, B^{(k)}(\\dt))$, $k=0,1,2,\\ldots$.\n",
+    "\n",
+    "$$\n",
+    "\\begin{aligned}\n",
+    "\\Delta \\ZZ_n &= -\\dr_{n} \\dt + \\ssi \\odot \\Delta \\BB_n^{(0)} \\\\\n",
+    "\\Delta V_n &= -U'_{\\pph}(X_n) \\dt + \\int_{t_n}^{t_n+\\dt} \\mmu' (\\ZZ_n + \\Delta \\ZZ(t)) \\ud t \\\\\n",
+    "           &= -U'_{\\pph}(X_n) \\dt + \\mmu' \\left(\\ZZ_n \\dt - \\dr_n \\frac{\\dt^2}{2} \\right) + \\mmu' (\\ssi \\odot \\Delta \\BB_n^{(1)}) \\\\\n",
+    "\\Delta X_n &= -U'_{\\pph}(X_n) \\frac{\\dt^2}{2} + \\mmu' \\ZZ_n \\frac{\\dt^2}{2} - \\mmu' \\dr_n \\frac{\\dt^3}{6} + \\mmu' (\\ssi \\odot \\Delta \\BB_n^{(2)}).\n",
+    "\\end{aligned}\n",
+    "$$\n",
+    "\n",
+    "where $\\odot$ denotes the element-wise matrix multiplication.\n",
+    "\n",
+    "Starting from the $3m \\times 1$ vector \n",
+    "\n",
+    "$$\n",
+    "\\BB_n(\\dt) = \\begin{pmatrix} \\BB_n^{(2)}(\\dt) \\\\ \\BB_n^{(1)}(\\dt) \\\\ \\BB_n^{(0)}(\\dt) \\end{pmatrix}\n",
+    "$$\n",
+    "\n",
+    "we can obtain\n",
+    "\n",
+    "$$\n",
+    "\\Delta \\WW_n = \\begin{pmatrix} \n",
+    "-U'_{\\pph}(X_n) \\frac{\\dt^2}{2} + \\mmu' \\left(\\ZZ_n \\frac{\\dt^2}{2} - \\dr_n \\frac{\\dt^3}{6}\\right) \\\\ \n",
+    "-U'_{\\pph}(X_n) \\dt + \\mmu' \\left(\\ZZ_n \\dt - \\dr_n \\frac{\\dt^2}{2} \\right) \\\\\n",
+    "-\\dr_{n} \\dt\n",
+    "\\end{pmatrix} + \\mmu' \\begin{pmatrix} \\ssi & & \\\\ & \\ssi & \\\\ & & \\ssi \\end{pmatrix}_{3m \\times 3m} \\BB_n(\\dt).\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "58e5e4d1",
+   "metadata": {},
+   "source": [
+    "## Old Materials Below (should be removed later)"
    ]
   },
   {
@@ -157,7 +196,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -171,7 +210,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.9.10"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
